--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Oferta 500mb Brisanet</title>
+  <title>Vídeo TV Retenção</title>
   <style>
     body {
       margin: 0;
